--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@microsoft/teamsfx": "^3.0.0",
         "@microsoft/teamsfx-react": "^4.0.0",
         "axios": "^0.21.4",
+        "dotenv": "^16.4.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.0"
