--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -46,7 +46,7 @@
         },
         {
             "entityId": "customTab",
-            "name": "My Custom Tab",
+            "name": "DuckDuckGo",
             "contentUrl": "${{TAB_ENDPOINT}}/index.html#/custom-tab",
             "websiteUrl": "${{TAB_ENDPOINT}}/index.html#/custom-tab",
             "scopes": ["personal"]
