--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
         "@microsoft/teamsfx-react": "^4.0.0",
         "antd": "^5.23.3",
         "axios": "^0.21.4",
+        "botbuilder": "^4.23.1",
         "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "nodemon": "^3.1.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.0"
+        "react-router-dom": "^6.8.0",
+        "restify": "^11.1.0"
     },
     "devDependencies": {
         "@types/node": "^18.0.0",
