--- a/appPackage/manifest.json
+++ b/appPackage/manifest.json
@@ -43,6 +43,30 @@
                     "fetchTask": true,
                     "context": ["message"]
                 },
+                {
+                    "id": "create_Issue",
+                    "title": "Create Issue",
+                    "description": "Create a Issue in Jira",
+                    "type": "action",
+                    "fetchTask": true,
+                    "context": ["message"]
+                },
+                {
+                    "id": "update_Issue",
+                    "title": "Update Issue",
+                    "description": "Update a Issue in Jira",
+                    "type": "action",
+                    "fetchTask": true,
+                    "context": ["message"]
+                },
+                {
+                    "id": "get_Issues",
+                    "title": "Get Issues",
+                    "description": "Get All Issues in Jira",
+                    "type": "action",
+                    "fetchTask": true,
+                    "context": ["message"]
+                },
                 
                 {
                     "id": "searchTask",
@@ -121,7 +145,9 @@
     ],
     "validDomains": [
         "${{TAB_HOSTNAME}}",
-        "https://3da1-2409-4081-1195-c29a-88e4-a8d4-f666-ace1.ngrok-free.app"
+        "https://2570-2401-4900-1c45-5243-5c94-1553-767b-f894.ngrok-free.app",
+        "https://sara2829.github.io/Create_Jira_Issue/",
+        "sara2829.github.io"
     ],
     "webApplicationInfo": {
         "id": "${{AAD_APP_CLIENT_ID}}",
